name:                Shaping
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Shapes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Shapings
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Ansi, Render, Shapes, Server 
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , blaze-svg , scotty , blaze-html, blaze-markup, text
                       , containers , mtl
